--- a/config.yaml
+++ b/config.yaml
@@ -1,13 +1,6 @@
-# Basic mediawiki-node-services config, running the following services in a
-# single process:
-#
-# - RESTBase
-# - Parsoid
-
 services:
   - name: restbase
     module: hyperswitch
-    app_base_path: ./node_modules/restbase
     conf:
       port: 7231
       salt: secret
@@ -24,37 +17,32 @@ services:
             name: http
             options:
             allow:
-              - pattern: '{env(MEDIAWIKI_API_URL,http://localhost/w/api.php)}'
+              - pattern: '${MEDIAWIKI_PROTOCOL}://${MEDIAWIKI_SITE_SERVER}/api.php'
                 forward_headers: true
               - pattern: http://localhost:8142
                 forward_headers: true
               - pattern: /^https?:\/\//
         paths:
-          /{domain:localhost}:
+          /{domain:${MEDIAWIKI_SITE_SERVER}}:
             x-modules:
               - path: projects/example.yaml
-                options: &default_options
+                options:
                   action:
-                    # XXX Check API URL!
-                    apiUriTemplate: '{env(MEDIAWIKI_API_URL,http://localhost/w/api.php)}'
-                    baseUriTemplate: "{{'http://{domain}:7231/{domain}/v1'}}"
+                    apiUriTemplate: '${MEDIAWIKI_PROTOCOL}://${MEDIAWIKI_SITE_SERVER}/api.php'
+                    baseUriTemplate: '${MEDIAWIKI_PROTOCOL}://${MEDIAWIKI_SITE_SERVER}/${MEDIAWIKI_SITE_SERVER}/v1'
                   parsoid:
-                    # XXX Check Parsoid URL!
-                    host: http://localhost:8142
+                    host: http://restbase:8142
                   table:
                     backend: sqlite
-                    dbname: /data/restbase_tables.sqlite3
+                    dbname: db.sqlite3
                     pool_idle_timeout: 20000
                     retry_delay: 250
                     retry_limit: 10
                     show_sql: false
-                  mathoid:
-                    host: '{env(MATHOID_HOST_PORT,http://localhost:10044)}'
                   mobileapps:
-                    host: '{env(MOBILEAPPS_URI,http://localhost:8888)}'
-                  citoid:
-                    host: '{env(CITOID_URI,http://localhost:1970)}'
-                  purged_cache_control: s-maxage=864000, max-age=86400
+                    host: http://appservice.wmflabs.org
+                  purged_cache_control: s-maxage=0, max-age=86400
+                  purged_cache_control_client_cache: s-maxage=0, max-age=300
   - name: parsoid
     entrypoint: apiServiceWorker
     conf:
@@ -63,15 +51,15 @@ services:
       serverInterface: 0.0.0.0
       debug: false
       mwApis:
-        - domain: localhost
-          prefix: localhost
-          uri: '{env(MEDIAWIKI_API_URL,http://localhost/w/api.php)}'
+        - domain: ${MEDIAWIKI_SITE_SERVER}
+          prefix: ${MEDIAWIKI_SITE_SERVER}
+          uri: '${MEDIAWIKI_PROTOCOL}://${MEDIAWIKI_SITE_SERVER}/api.php'
 
-# Finally, a standard service-runner config.
 info:
-  name: mw-node
+  name: restbase
 
 logging:
+  name: restbase
   level: info
 
 num_workers: 1
